--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,8 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <script src="lib/a0-angular-storage/dist/angular-storage.min.js"></script>
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
